--- a/index.html
+++ b/index.html
@@ -6,25 +6,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./css/reset.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/styles.css"> 
+
 </head>
 <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
 <body>
-  <header>
-    <h1 class="header__title">Real-Time Transcription</h1>
-    <p class="header__sub-title">Try AssemblyAI's new real-time transcription endpoint!</p>
-  </header>
+  <section class="bg-secondary">
+ <div class="d-flex justify-content-around">
+    <h1 class="header">CustomerAI</h1>
+    <button id="button" class="btn btn-primary real-time-interface__button">Start</button>
+  </div>
+ 
+  </section>
   <div id="metered-frame"></div>
     <script src="https://cdn.metered.ca/sdk/frame/1.4.3/sdk-frame.min.js"></script> <script>
       var frame = new MeteredFrame(); frame.init({
           roomURL: "assembly.metered.live/test",
       }, document.getElementById("metered-frame")); 
     </script> 
-  <div class="real-time-interface">
-    <p id="real-time-title" class="real-time-interface__title">Click start to begin recording!</p>
-    <p id="button" class="real-time-interface__button">Start</p>
+ <div>
     <p id="message" class="real-time-interface__message"></p>
   </div>
   <script src="./js/index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
