--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
 <body>
   <section class="bg-secondary">
- <div class="d-flex justify-content-around">
+ <div class="d-flex justify-content-between">
     <h1 class="header">CustomerAI</h1>
     <button id="button" class="btn btn-primary real-time-interface__button">Start</button>
   </div>
